RESOLVED FIXED 259187
[macOS] LocalSampleBufferDisplayLayer is rotating video frames on the wrong side
https://bugs.webkit.org/show_bug.cgi?id=259187
Summary [macOS] LocalSampleBufferDisplayLayer is rotating video frames on the wrong side
youenn fablet
Reported 2023-07-13 06:46:53 PDT
Attachments
youenn fablet
Comment 1 2023-07-13 11:33:46 PDT
EWS
Comment 2 2023-07-14 01:51:34 PDT
Committed 266061@main (2a4d7141520c): <https://commits.webkit.org/266061@main> Reviewed commits have been landed. Closing PR #15823 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.