[macOS] LocalSampleBufferDisplayLayer is rotating video frames on the wrong side https://bugs.webkit.org/show_bug.cgi?id=259187 rdar://112127520

Reviewed by Eric Carlson.

transform is applied counter-clockwise in macOS and clockwise in iOS.
Update rotation matrix accordingly.

* LayoutTests/fast/mediastream/video-rotation2-expected.txt: Added.
* LayoutTests/fast/mediastream/video-rotation2.html: Added.
* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/graphics/avfoundation/objc/LocalSampleBufferDisplayLayer.mm:
(WebCore::videoTransformationMatrix):

Canonical link: https://commits.webkit.org/266061@main